@@ -39,6 +39,17 @@ A Gradle project usually keeps the version literal in `gradle/libs.versions.toml
 
 Raise `gatling-gradle` past the floor in [gatling-lines.md](../../gatling-versions/references/gatling-lines.md) and it sets the JVM option 3.13 requires, `--add-opens=java.base/java.lang=ALL-UNNAMED`, on its own; only when pinned lower, set `jvmArgs` in the `gatling` block to a list containing that flag.
 
-Check the Gradle version before promising `gatlingRun`. `io.gatling.gradle` `3.13.1` fails to register the task on Gradle 9 (`Could not get unknown property 'reportsDir'`) and works on 8.10.2. When it will not register, `gatlingClasses` still compiles and the simulation can be run off the `gatlingRuntimeClasspath` with `io.gatling.app.Gatling -s <fqcn>`.
+Check the Gradle version before promising `gatlingRun`. On Gradle 9 `io.gatling.gradle` fails to register the task below `3.14.3.1` — the whole 3.11 and 3.13 lines, latest patches included — with `Could not get unknown property 'reportsDir'`. Everything works on 8.10.2.
+
+`gatlingClasses` still compiles there, because the plugin only breaks when the run task is realized. Running the simulation by hand then means supplying the three things the plugin used to:
+
+```bash
+gradle -q gatlingCp        # a task printing configurations.gatlingRuntimeClasspath.asPath
+java --add-opens=java.base/java.lang=ALL-UNNAMED \
+  -cp "build/classes/scala/gatling:src/gatling/resources:<that classpath>" \
+  io.gatling.app.Gatling -s <fqcn> -rf build/reports/gatling
+```
+
+Drop `-rf` and the run dies on `Can't use the file DataWriter without setting the results directory`. Drop the flag and it dies on `IllegalAccessException` — nothing passes it for you here. And `gatlingRuntimeClasspath` carries neither the compiled simulation nor the resources, so both source roots go on the front.
 
 On the 3.11 line the flag is unnecessary and the floor is `3.11.1`.
